# rustlang-projects

./: .gitignore
bevy_lesson/: Cargo.toml
bevy_lesson/src/: main.rs
bevy_particle_system/: Cargo.toml
bevy_particle_system/src/: compute_utils.rs  main.rs  particle_render.rs  particle_system.rs  particle_update.rs
cli_toy_blockchain/: Cargo.toml
cli_toy_blockchain/src/: blockchain.rs  main.rs
creative-projects-rust-programmers/: Cargo.toml
creative-projects-rust-programmers/assets_slalom/: Cargo.toml
creative-projects-rust-programmers/assets_slalom/src/: main.rs
creative-projects-rust-programmers/calc_analyzer/: Cargo.toml
creative-projects-rust-programmers/calc_analyzer/src/: analyzer.rs  main.rs  parser.rs  symbol_table.rs
creative-projects-rust-programmers/calc_compiler/: Cargo.toml
creative-projects-rust-programmers/calc_compiler/src/: main.rs  symbol_table.rs
creative-projects-rust-programmers/calc_interpreter/: Cargo.toml
creative-projects-rust-programmers/calc_interpreter/src/: analyzer.rs  executor.rs  parser.rs
creative-projects-rust-programmers/calc_parser/: Cargo.toml
creative-projects-rust-programmers/calc_parser/src/: main.rs
creative-projects-rust-programmers/gg_assets_slalom/: Cargo.toml
creative-projects-rust-programmers/gg_assets_slalom/src/: main.rs
creative-projects-rust-programmers/gg_ski/: Cargo.toml
creative-projects-rust-programmers/gg_ski/src/: main.rs
creative-projects-rust-programmers/silent_slalom/: Cargo.toml
creative-projects-rust-programmers/silent_slalom/src/: main.rs
creative-projects-rust-programmers/ski/: Cargo.toml
creative-projects-rust-programmers/ski/src/: main.rs
extreme_bevy/: Cargo.toml  README.md
extreme_bevy/src/: component.rs  input.rs  main.rs
games_103/HW2/: Cargo.toml
games_103/HW2/src/: main.rs
games_103/HW2/src/components/: mod.rs
games_103/HW2/src/systems/: mod.rs
games_103/physis_rapier/: Cargo.toml
games_103/physis_rapier/examples/: example-bevy-rapier-getting-started.rs  example-using-rapier.rs
oii/: Cargo.toml
oii/src/: main.rs
oii/src/components/: mod.rs
oii/src/controlls/: orbit_controll.rs
oii/src/resources/: mod.rs
oii/src/system/: mod.rs  pick_event.rs  render_obj.rs
oii/src/ui/: mod.rs
oii/src/utils/: mod.rs
partical-machine-learing-with-rust/chapter2/iris_classification_tchrs/: Cargo.toml
partical-machine-learing-with-rust/chapter2/iris_classification_tchrs/src/: main.rs  simple_nn.rs
partical-machine-learing-with-rust/chapter2/rustlearn_classification_tasks/: Cargo.toml
partical-machine-learing-with-rust/chapter2/rustlearn_classification_tasks/src/: logistic_reg.rs  main.rs  tree.rs
partical-machine-learing-with-rust/chapter2/rustymachine-regression/: Cargo.toml
partical-machine-learing-with-rust/chapter2/rustymachine-regression/src/: gaussian_process_reg.rs  glm.rs  lin_reg.rs  main.rs
partical-machine-learing-with-rust/chapter3/rusty_machine_unsupervised/: Cargo.toml
partical-machine-learing-with-rust/chapter3/rusty_machine_unsupervised/src/: main.rs
partical-machine-learing-with-rust/chapter5/fasttext-model/: Cargo.toml
partical-machine-learing-with-rust/chapter5/fasttext-model/data/: train.csv
partical-machine-learing-with-rust/chapter5/fasttext-model/src/: main.rs
pokem/: Cargo.toml
pokem/examples/: tutorial1.rs
pokem/src/: bullet.rs  main.rs  main_menu.rs  target.rs  tower.rs
rust-struct-algorithm/blockchain/: Cargo.toml
rust-struct-algorithm/blockchain/src/: main.rs
rust-struct-algorithm/blockchain/src/core/: bcdb.rs  block.rs  blockchain.rs  mod.rs  pow.rs  transaction.rs
rust-struct-algorithm/blockchain/src/utils/: bkey.rs  mod.rs  serializer.rs
shorelark/libs/simulation/: Cargo.toml
shorelark/libs/simulation-wasm/: Cargo.toml
shorelark/libs/simulation-wasm/src/: animal.rs  food.rs  lib.rs  world.rs
shorelark/libs/simulation/src/: animal.rs  animal_individual.rs  brain.rs  eye.rs  food.rs  lib.rs  world.rs
video-audio/: Cargo.toml
video-audio/asserts/: output_pcm_l.pcm  output_pcm_r.pcm
video-audio/examples/: aac.rs  amf.rs  broadcast.rs  flv.rs  h264.rs  pcm.rs  rtp.rs
video-audio/image-process/: Cargo.toml
video-audio/image-process/src/: lib.rs  utils.rs
video-audio/image-process/src/image/: gray.vertex.glsl  mod.rs
video-audio/image-process/src/image/gaussian_blur/: gaussian_blur.fragment.glsl  gaussian_blur.vertex.glsl  mod.rs
video-audio/image-process/src/image/gray/: gray.fragment.glsl  gray.vertex.glsl  mod.rs
video-audio/image-process/src/image/pixelate/: mod.rs  pixelate.fragment.glsl
video-audio/image-process/src/image/radial_distortion/: mod.rs  radial.fragment.glsl
video-audio/image-process/src/image/twist/: mod.rs  twist.fragment.glsl  twist.vertex.glsl
video-audio/image-process/src/utils/: gl_context.rs  mod.rs
video-audio/player/: .eslintignore  README.md  package.json  tsconfig.json  vue.config.js
video-audio/player/public/best_web_model/: model.json
video-audio/player/src/: App.vue  image-prcocess.ts  main.ts
video-audio/player/src/router/: index.ts
video-audio/player/src/utils/: index.ts  webgl.d.ts  webgl.js
video-audio/player/src/views/: AboutView.vue  HomeView.vue
video-audio/src/: main.rs
video-audio/src/http_flv/: flv.rs  mod.rs
video-audio/src/protocol/: bit_stream.rs  mod.rs  nalu.rs  pic_parameter.rs  seq_parameter.rs  seq_paramter.rs  slice.rs
video-audio/src/rtmp/: handcheck.rs  mod.rs  server.rs
video-audio/src/rtmp/protocol/: chunk.rs  handcheck.rs  handshark.rs  message.rs  mod.rs  read_effect.rs
video-audio/src/rtmp/protocol/message/: messages.rs  mod.rs
video-audio/src/rtmp/protocol/message/messages/: command_message.rs  mod.rs  user_control_message.rs
video-audio/src/rtmp/protocol/read_effect/: mod.rs
video-audio/src/util/: async_from.rs  effect_bytes.rs  event_bus.rs  mod.rs
wgpu-tutorial/model/: Cargo.toml
wgpu-tutorial/model/src/: main.rs  model.rs  resources.rs  texture.rs
wgpu-tutorial/normal/: Cargo.toml
wgpu-tutorial/normal/src/: light.wgsl  main.rs  model.rs  resources.rs  shader.wgsl
(+225 files in other folders)
