[package]
name = "bevy_particle_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.9", features = ["dynamic", "wav"] }
bevy-inspector-egui = "0.14.0"
bevy_mod_debugdump = "0.6"
wgpu = "0.14"
