[package]
authors = ["swzhxx <549909896@qq.com>"]
edition = "2018"
name = "cli_toy_blockchain"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
serde = {version = "1.0.126", features = ["derive"]}
serde_derive = "1.0.126"
serde_json = "1.0.64"
sha2 = "0.4.2"
