[workspace]
members = ["ski", "silent_slalom", "gg_assets_slalom", "assets_slalom", "gg_ski", "calc_parser", "calc_analyzer", "calc_interpreter", "calc_compiler"]

[package]
edition = "2021"
name = "creative-projects-rust-programmers"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
