[package]
edition = "2021"
name = "oii"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "^0.10.1"
bevy_egui = "0.20.3"
nalgebra = "^0.32.2"
obj-rs = {version = "0.6", default-features = false}
rfd = "0.11"
rapier3d = "0.17.2"