[package]
edition = "2021"
name = "oii"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bevy = "^0.10.1"
bevy_egui = "0.20.3"
nalgebra = "^0.32.2"
obj-rs = {version = "0.6", default-features = false}
rapier3d = "0.17.2"
rfd = "0.11"
bevy_mod_picking = "0.12.0"
serde = "1.0.160"
serde_json = "1.0.96"