[package]
edition = "2021"
name = "pokem"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.8"}
bevy-inspector-egui = "0.12.1"
bevy_mod_picking = "0.9"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
