[package]
edition = "2021"
name = "pokem"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.9.1", features = ["dynamic" ] }
bevy-inspector-egui = "0.14.0"
bevy_mod_picking = "0.10"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
