[package]
edition = "2021"
name = "video-audio"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "pcm"

[[example]]
name = "h264"

[[example]]
name = "aac"

[[example]]
name = "flv"

[dependencies]
anyhow = "1"
bytes = "1.1"
