[package]
edition = "2021"
name = "video-audio"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "pcm"

[[example]]
name = "h264"

[[example]]
name = "aac"

[[example]]
name = "flv"

[[example]]
name = "rtp"

[dependencies]
anyhow = "1"
async-trait = "0.1.52"
bytes = "1.1"
rand = "0.8.5"
tokio = {version = "1.17.0", features = ["full"]}
