[package]
edition = "2021"
name = "HW2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.8.1"}
bevy-inspector-egui = "0.12.1"
bevy_obj = "0.8.0"
bevy_mod_picking = "0.8.2"
bevy_transform_gizmo = "0.3.0"
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
