[package]
name = "physis_rapier"
version = "0.1.0"
edition = "2021"

[[example]]
name = "using-rapier"
path = "examples/example-using-rapier.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

# TODO: Replace the * by the latest version number.
rapier3d = { version = "*", features = [ "simd-stable" ] }