[package]
edition = "2021"
name = "rustlearn_classification_tasks"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.0.5"
env_logger = "0.9.0"
log = "0.4.0"
ml-utils = {path = "../ml-utils"}
rand = "0.6.5"
rustlearn = "0.5.0"