[package]
edition = "2021"
name = "rustymachine-regression"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.0.7"
env_logger = "0.9.0"
log = "0.4.0"
ml-utils = {path = "../ml-utils"}
rand = "0.6.5"
rusty-machine = "0.5.4"
serde = "1"
serde_derive = "1"
