[package]
edition = "2021"
name = "lib-simulation-wasm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = {version = "0.2", features = ["js"]}
lib-simulation = {path = "../simulation"}
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde-wasm-bindgen = "0.4"
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
[lib]
crate-type = ['cdylib']
