[package]
edition = "2021"
name = "lib-simulation"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-genetic-algorithm = {path = "../genetic-algorithm"}
lib-neural-network = {path = "../neural-network"}
nalgebra = {version = "0.26", features = ["rand-no-std"]}
rand = "0.8"
